# particle-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  imgui.ini
assets/bed-room/: bed-room.mtl
assets/living-room/: LivingRoom.mtl
include/core/: app.hpp
include/core/components/: component.hpp  mesh.hpp  model.hpp  point_light.hpp  rigidbody2d.hpp  spot_light.hpp  transform.hpp
include/core/framebuffer/: framebuffer.hpp
include/core/input/: input.hpp  mouse.hpp
include/core/material/: material.hpp
include/core/math/: math.hpp
include/core/object/: object.hpp
include/core/physics/: physics_world.hpp
include/core/primitive/: primitive.hpp
include/core/procedural/: procedural.hpp
include/core/renderbuffer/: renderbuffer.hpp
include/core/renderer/: renderer.hpp
include/core/shader/: shader.hpp
include/core/static_camera/: static_camera.hpp
include/core/static_light/: static_light.hpp
include/core/texture/: texture.hpp  texture_manager.hpp
include/core/time/: time.hpp
include/core/vertex/: vertex.hpp
include/core/window/: window.hpp
include/core/world/: world.hpp
include/editor/: editor.hpp
include/editor/hierarchy/: hierarchy.hpp
include/editor/inspector/: inspector.hpp
include/particle/: app.hpp
include/particle/color_id/: color_id.hpp
include/particle/model/: model.hpp
include/particle/primitive/: primitive.hpp
include/particle/simulation/: simulation.hpp
shaders/diffuse/: blin_phong.frag  cell_shader.frag  cubemap.frag  demo.frag  diffuse.frag  diffuse.vert  diffuse_v2.vert  environment_reflection.frag  multi_light_diffuse.frag  solid.frag  tangent_normal.frag  tangent_normal.vert
shaders/geometry-learning/: geom.frag  geom.glsl
shaders/normal-viz/: normal.frag  normal.glsl  normal.vert
shaders/screen/: edge_detection.frag  noise-viz.frag  screen.frag  screen.vert
shaders/shadow/: shadow_cube_map.frag  shadow_cube_map.vert  simple_shadow.vert
shaders/sketch/: sketch.frag
shaders/skybox/: skybox.frag  skybox.vert
shaders/video-demo/: diffuse.frag
shaders/wobbly/: wobbly.glsl  wobbly.vert
src/: CMakeLists.txt  main.cpp
src/core/: app.cpp
src/core/components/: component.cpp  mesh.cpp  model.cpp  point_light.cpp  rigidbody2d.cpp  spot_light.cpp  transform.cpp
src/core/framebuffer/: framebuffer.cpp
src/core/input/: input.cpp  mouse.cpp
src/core/material/: material.cpp
src/core/math/: math.cpp
src/core/object/: object.cpp
src/core/physics/: physics_world.cpp
src/core/primitive/: primitive.cpp
src/core/procedural/: procedural.cpp
src/core/renderbuffer/: renderbuffer.cpp
src/core/renderer/: renderer.cpp
src/core/shader/: shader.cpp
src/core/static_camera/: static_camera.cpp
src/core/static_light/: static_light.cpp
src/core/texture/: texture.cpp  texture_manager.cpp
src/core/time/: time.cpp
src/core/window/: window.cpp
src/core/world/: world.cpp
src/editor/: editor.cpp
src/editor/hierarchy/: hierarchy.cpp
src/editor/inspector/: inspector.cpp
src/particle/: app.cpp
src/particle/color_id/: color_id.cpp
src/particle/model/: model.cpp
src/particle/primitive/: primitive.cpp
src/particle/simulation/: simulation.cpp
